--- a/about.html
+++ b/about.html
@@ -44,12 +44,17 @@
             text-align: center;
         }
 
+        .size-18 {
+            font-size: 26px;
+        }
+
         .size-14 {
 
             color: #333;
+            font-size: 14px;
         }
 
-       
+
 
         @media (max-width:767px) {
             .display-3 {
@@ -125,10 +130,12 @@
     <div class="container-xxl space-1">
         <div class="container">
             <div class="row g-5">
+                <div class="col-sm-4 col-xs-12">
+                    <img src="img/cardiac-surgery-page-2.png" class="img-fluid rounded-circle">
+                </div>
+                <div class="col-lg-8 wow fadeIn" data-wow-delay="0.5s">
 
-                <div class="col-lg-12 wow fadeIn" data-wow-delay="0.5s">
-
-                    <h2 class="size-18">Our Mission</h2>
+                    <h2 class="size-18 mt-5">Our Mission</h2>
                     <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>To ensure safe, timely, and
                         effective
                         treatment options in India for global patients.</p>
@@ -145,6 +152,7 @@
 
                     <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a> -->
                 </div>
+
             </div>
         </div>
     </div>
@@ -191,33 +199,8 @@
     </div>
     <div class="container-xxl space-1">
         <div class="row">
-            <div class="col-sm-6 col-xs-12">
-                <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a> -->
-                <h2 class="size-14">Our Services at a Glance</h2>
-                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Medical Consultations &
-                    Second Opinions
-                </p>
-                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Surgical & Non-Surgical
-                    Treatment Planning
-                </p>
-                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Visa Invitation Letters
-                </p>
-                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Flight Booking & Airport
-                    Transfers
-                </p>
-                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Accommodation Near Hospitals
-                </p>
-                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Post-treatment Recovery
-                    Packages
-                </p>
-                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Wellness & Rejuvenation
-                    Add-ons
-                </p>
-                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Interpreter & Attendant
-                    Assistance
-                </p>
-            </div>
-            <div class="col-sm-6 col-xs-12">
+
+            <div class="col-sm-4 col-xs-12">
                 <h2 class="size-14">Specialties We Handle</h2>
                 <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Cardiac Surgery
 
@@ -259,79 +242,120 @@
 
                 </p>
             </div>
+            <div class="col-sm-4 col-xs-12">
+                <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a> -->
+                <h2 class="size-14">Our Services at a Glance</h2>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Medical Consultations &
+                    Second Opinions
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Surgical & Non-Surgical
+                    Treatment Planning
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Visa Invitation Letters
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Flight Booking & Airport
+                    Transfers
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Accommodation Near Hospitals
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Post-treatment Recovery
+                    Packages
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Wellness & Rejuvenation
+                    Add-ons
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Interpreter & Attendant
+                    Assistance
+                </p>
+            </div>
+            <div class="col-sm-4 col-xs-12">
+                <img src="img/neuro-3.png" class="img-fluid rounded-circle">
+            </div>
         </div>
     </div>
 
     <!-- Feature Start -->
-    <div class="container-fluid bg-primary-1 overflow-hidden space-1">
+    <div class="container-fluid why-chose-head overflow-hidden px-lg-0 mb-5">
         <div class="container feature px-lg-0">
-            <div class="row g-0 mx-lg-0">
-                <div class="col-lg-6 feature-text space-1 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="p-lg-5 ps-lg-0">
-                        <h1 class="text-white-1 mb-4 size-18">Trusted by Patients from Around the World</h1>
-                        <p class="text-white-1 mb-4 pb-2 size-14">We’ve proudly served hundreds of international
-                            patients from
-                            the USA, Canada, UK, Nigeria, UAE, Oman, Bangladesh, and Kenya—many of whom share their
-                            **success stories** on our platform. Their journeys inspire us to keep raising the bar for
-                            compassionate and competent medical care.
+            <div class="row g-0 mx-lg-0 page-set">
+                <div class="col-lg-6 bg-primary-1 feature-text wow fadeIn" data-wow-delay="0.1s">
+                    <div class="ps-lg-0">
+
+                        <h1 class="text-white-1 mb-2 mt-4">WHY CHOOSE<br>
+                            Our Medical Treatment ?</h1>
+                        <p class="text-white-1 mb-2 pb-2 size-14">
+                            24/7 Service- Round the clock services & complete surveillance &
+                            patient care makes us stands out from the rest.
                         </p>
                         <div class="row g-4">
                             <div class="col-sm-6 col-xs-12">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light-1"
-                                        style="width: 55px; height: 55px;">
+                                        style="width: 55px; height: 55px">
                                         01
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white-1 mb-2 size-14">Experience</p>
-                                        <h5 class="text-white-1 mb-0 size-18">Doctors</h5>
+                                        <h5 class="text-white-1 mb-2">Affordability</h5>
+                                        <p class="text-white-1 mb-0 size-14">With affordable packages offering proven
+                                            solutions
+                                            we
+                                            ensure that each & every patient receive the best health care</p>
+
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-xs-12">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light-1"
-                                        style="width: 55px; height: 55px;">
+                                        style="width: 55px; height: 55px">
                                         02
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white-1 mb-2">Quality</p>
-                                        <h5 class="text-white-1 mb-0">Services</h5>
+                                        <h5 class="text-white-1 mb-2">Specialist Consultation</h5>
+                                        <p class="text-white-1 mb-0 size-14">Proper consultation with doctors &
+                                            pathologists for
+                                            the best possible medical facilities allows patient to get an overview about
+                                            the complete medical condition.</p>
+
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-xs-12">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light-1"
-                                        style="width: 55px; height: 55px;">
+                                        style="width: 55px; height: 55px">
                                         03
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white-1 mb-2">Positive</p>
-                                        <h5 class="text-white-1 mb-0">Consultation</h5>
+                                        <h5 class="text-white-1 mb-2">State-Of-Art-Medical </h5>
+                                        <p class="text-white-1 mb-0 size-14">With quality infrastructure & best
+                                            technologies, we
+                                            offer the patients zone of maximum comfort.</p>
+
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-xs-12">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light-1"
-                                        style="width: 55px; height: 55px;">
+                                        style="width: 55px; height: 55px">
                                         04
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-white-1 mb-2">24 Hours</p>
-                                        <h5 class="text-white-1 mb-0">Support</h5>
+                                        <h5 class="text-white-1 mb-2">Reputed Health Care </h5>
+                                        <p class="text-white-1 mb-0 size-14">With experienced healthcare professionals
+                                            with you
+                                            to access your condition, you can consider to be under positive
+                                            surveillance.</p>
+
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/banner-home-big.png"
-                            style="object-fit: cover;" alt="">
-                    </div>
+                <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s">
+
                 </div>
             </div>
         </div>
