--- a/eye-surgery.html
+++ b/eye-surgery.html
@@ -36,7 +36,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat !important;
+            background: url(img/eye-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -182,7 +182,7 @@
 
                         <div class="row mt-5">
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/eye-banner-1.png" class="img-fluid rounded-circle">
                             </div>
                             <div class="col-md-6">
                                 <h2>Partner Hospitals and Eye Care Centers</h2>
@@ -278,7 +278,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-4">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/eye-banner-2.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
