--- a/hair-transplant.html
+++ b/hair-transplant.html
@@ -37,7 +37,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat !important;
+            background: url(img/hair-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -181,7 +181,7 @@
 
                         <div class="row mt-5">
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/hair-banner-1.png" class="img-fluid rounded-circle">
                             </div>
                             <div class="col-md-6">
                                 <h2>Top Hair Transplant Clinics in India</h2>
@@ -278,7 +278,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-4">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/hair-banner-2.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
