--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                 <p class="d-inline-block border rounded-pill py-1 px-4">
                     Testimonial
                 </p>
-                <h1>What Say Our Patients!</h1>
+                <h1 class="size-18">What Say Our Patients!</h1>
             </div>
           <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
