--- a/neuro-surgeries.html
+++ b/neuro-surgeries.html
@@ -36,7 +36,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat !important;
+            background: url(img/neuro-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -172,7 +172,7 @@
 
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/neuro-1.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
@@ -182,7 +182,7 @@
 
                         <div class="row mt-5">
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/neuro-2.png" class="img-fluid rounded-circle">
                             </div>
                             <div class="col-md-6">
                                 <h2>Leading Hospitals for Neurosurgery in India</h2>
@@ -286,7 +286,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-4">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/neuro-3.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
