--- a/stem-cell-therapy.html
+++ b/stem-cell-therapy.html
@@ -37,7 +37,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat !important;
+            background: url(img/stem-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -159,7 +159,7 @@
                             </div>
 
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/stem-banner-1.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
@@ -169,7 +169,7 @@
 
                         <div class="row mt-5">
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded">
+                                <img src="/img/stem-banner-2.png" class="img-fluid rounded">
                             </div>
                             <div class="col-md-6">
                                 <h2 class="mt-5">Why Choose India for Stem Cell Therapy?</h2>
@@ -249,7 +249,7 @@
 
                             </div>
                             <div class="col-md-5">
-                                <img src="/img/about-1.png" class="img-fluid rounded">
+                                <img src="/img/stem-banner-3.png" class="img-fluid rounded">
                             </div>
                         </div>
 
@@ -319,7 +319,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-4">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/stem-banner-1.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
